<resources>
    <string name="app_name">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">No Internet</string>
    <string name="retry">Retry</string>
    <string name="headlines">Headlines.</string>
    <string name="your_favourites">Your Favourites</string>
    <string name="news">News</string>
    <string name="source">SOURCE</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="date_time">DATE TIME</string>
    <string name="go_website">Go to the Website</string>
    <string name="search">Search</string>
    <string name="search_news">Search news...</string>
</resources>