<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="409dp"
        android:layout_height="247dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="-4dp"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="318dp"
        android:layout_height="62dp"
        android:layout_marginTop="316dp"
        android:text="@string/title"
        android:textSize="18sp"
        android:textColor="@color/firstB"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="16dp"
        android:text="@string/date_time"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="27dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="268dp"
        android:src="@drawable/baseline_emoji_people_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/SecondB">
    </ImageView>

    <TextView
        android:id="@+id/source"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="36dp"
        android:text="@string/source"
        android:textSize="16sp"
        android:textColor="@color/firstSand"
        app:layout_constraintEnd_toStartOf="@+id/date"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="27dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="268dp"
        android:src="@drawable/baseline_calendar_month_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/SecondB">
    </ImageView>

    <TextView
        android:id="@+id/description"
        android:layout_width="360dp"
        android:layout_height="232dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="392dp"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goToWebsiteButton"
        android:layout_width="187dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/firstSand"
        android:text="@string/go_website"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.285" />

</androidx.constraintlayout.widget.ConstraintLayout>
